--- a/app/assets/javascripts/wordify_blog/views/blog/_navigation.html.slim
+++ b/app/assets/javascripts/wordify_blog/views/blog/_navigation.html.slim
@@ -13,6 +13,6 @@ div ng-app="blogApp"
         li#comments-tab
           a
             | Comments
-        li#disus-tab
+        li#disqus-tab
           a
             | Disqus
