--- a/app/assets/javascripts/wordify_blog/views/blog/_navigation.html.slim
+++ b/app/assets/javascripts/wordify_blog/views/blog/_navigation.html.slim
@@ -10,9 +10,9 @@ div ng-app="blogApp"
         li#category-tab
           a
             | Categories
-        li#comments-tab
+        li#preferences-tab
           a
-            | Comments
+            | Preferences
         li#disqus-tab
           a
             | Disqus
