--- a/app/assets/javascripts/wordify_blog/views/blog_categories/_form.html.slim
+++ b/app/assets/javascripts/wordify_blog/views/blog_categories/_form.html.slim
@@ -1,1 +1,1 @@
-input type="text" placeholder="Name" data-bind="category.name" id="category-name"
+input type="text" data-bind-placeholder="t.wordify_cms.blog.category.name" data-bind="category.name" id="category-name"
