--- a/app/assets/javascripts/wordify_blog/views/blog/_form.html.slim
+++ b/app/assets/javascripts/wordify_blog/views/blog/_form.html.slim
@@ -1,10 +1,10 @@
-input type="text" placeholder="Title" data-bind="post.title" id="post_title"
+input type="text" data-bind-placeholder="t.wordify_cms.blog.post.title" data-bind="post.title" id="post_title"
 label for="post_text"
 textarea id="post_text" data-bind="post.text" data-view="TinyMceView" class="tiny-editor"
-label for="post_permalink"
-  | Permalink
+
+label for="post_permalink" data-bind="t.wordify_cms.blog.post.permalink"
 input type="text" placeholder="Permalink" data-bind="post.permalink" id="post_permalink"
-label for="post_category_id"
-  | Category
+
+label for="post_category_id" data-bind="t.wordify_cms.blog.post.category"
 select id="post_category_id" data-bind="post.category_id"
   option data-foreach-category="categories" data-bind-value="category.id" data-bind="category.name"
