--- a/app/assets/javascripts/wordify_blog/views/blog/index.html.slim
+++ b/app/assets/javascripts/wordify_blog/views/blog/index.html.slim
@@ -1,15 +1,12 @@
 div data-yield="blog_navigation"
 div
-  a data-route="routes.blogPosts.new" class="btn btn-primary"
-    | New Post Entry
+  a data-route="routes.blogPosts.new" class="btn btn-primary" data-bind="t.wordify_cms.blog.post.new"
 div ng-controller="BlogCtrl"
   table class="table table-striped table-bordered"
     thead
       tr
-        th
-          | Title
-        th
-          | Category
+        th data-bind="t.wordify_cms.blog.post.title"
+        th data-bind="t.wordify_cms.blog.post.category"
         th
     tbody
       tr data-foreach-post="posts"
