Assign padding to new entry buttons

--- a/app/assets/javascripts/wordify_blog/views/blog/index.html.slim
+++ b/app/assets/javascripts/wordify_blog/views/blog/index.html.slim
@@ -1,5 +1,5 @@
 div data-yield="blog_navigation"
-div
+div class="blog-post-entry-btn"
   a data-route="routes.blogPosts.new" class="btn btn-primary" data-bind="t.wordify_cms.blog.post.new"
 div ng-controller="BlogCtrl"
   table class="table table-striped table-bordered"
