--- a/app/assets/javascripts/wordify_blog/views/blog_categories/index.html.slim
+++ b/app/assets/javascripts/wordify_blog/views/blog_categories/index.html.slim
@@ -1,5 +1,5 @@
 div data-yield="blog_navigation"
-div
+div class="blog-post-entry-btn"
   a data-route="routes.blogCategories.new" class="btn btn-primary" data-bind="t.wordify_cms.blog.category.new"
 div class="blog_categories-list"
   table class="table table-striped table-bordered"
